<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ajout_contact">Add a contact</string>

    <!-- Main Activity Buttons -->
    <string name="red_button_text">Add a contact</string>
    <string name="blue_button_text">Contacts</string>
    <string name="green_button_text">TEMPLATE</string>
    <string name="yellow_button_text">TEMPLATE</string>
    <string name="title_activity_list_contact">Contacts</string>
    <string name="contact_item_name_placeholder">Name</string>
    <string name="contact_item_number_placeholder">Number</string>
    <string name="title_activity_contact_detail">ContactDetail</string>
    <string name="contact_detail_first_name">First Name</string>
    <string name="contact_detail_last_name">Last Name</string>
    <string name="contact_add_phone_number">Phone Number</string>

</resources>
