<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50" >

            <Button
                android:id="@+id/blue_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.50"
                android:background="@drawable/blue_button"
                android:onClick="accederRepertoire"
                android:text="@string/blue_button_text" />

            <Button
                android:id="@+id/red_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.50"
                android:background="@drawable/red_button"
                android:onClick="ajoutContact"
                android:text="@string/red_button_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50" >

            <Button
                android:id="@+id/green_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.50"
                android:background="@drawable/green_button"
                android:text="@string/yellow_button_text" />

            <Button
                android:id="@+id/yellow_button"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.50"
                android:background="@drawable/yellow_button"
                android:text="@string/yellow_button_text" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>